--- a/Exercise.html
+++ b/Exercise.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tas</title>
+    <title>Task</title>
     <style>
         *{
             margin: 0;
@@ -30,6 +30,7 @@
         ul{
             list-style: none;
             text-align: left;
+            line-height: 1.5;
             padding: 10px;
             margin: 0;     
         }
