--- a/Exercise.html
+++ b/Exercise.html
@@ -22,7 +22,7 @@
             float: left;
             background: #DCDCDC;
             width: 30%;
-            height: 100%;
+            height: 100vh;
             border: none;
             
         }
